# evolution-rerere

./: .gitmodules  Cargo.toml  Gir.toml  README.md  gircompile.sh
evolution-glue/: Cargo.toml  build.rs  wrapper.h
evolution-glue-sys/: Cargo.toml  build.rs
evolution-glue-sys/src/: lib.rs
evolution-glue-sys/tests/: abi.rs  constant.c  layout.c
evolution-glue/src/: lib.rs
evolution-glue/src/auto/: extensible.rs  extension.rs  mod.rs  versions.txt
evolution-rerere/: Cargo.toml
evolution-rerere/src/: ext.rs  ffi.rs  glib_magic.rs  imp.rs  lib.rs  obj.rs
evolution-rerere/src/subclass/: extension.rs
grr/: Cargo.toml
grr/src/: gir_xml.rs  main.rs  model.rs  stringing.rs  typing.rs
minimal-gir/: EDataServer-1.2.gir  Everything-0.1.gir  Evolution-3.0.gir  EvolutionMailComposer-3.0.gir  EvolutionUtil-3.0.gir  freetype2-2.0.gir  grr.yaml
minimal-gir/handwritten/: EDataServer-1.2.gir  Everything-0.1.gir
