[package]
name = "evolution-glue-sys"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.system-deps]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[dependencies]
glib = { package = "glib-sys", version = "0.22" }
gobject = { package = "gobject-sys", version = "0.22" }
libc = "0.2"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
